force-app/main/default/objects/Visit_Result__c/Visit_Result__c.object-meta.xml
<CustomObject>
    <label>Visit_Result</label>
    <nameField>
        <displayFormat>VR-{0000000}</displayFormat>
        <label>Visit_Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit_Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>