force-app/main/default/objects/Visit_Result__c/fields/Actual_Value__c.field-meta.xml
<CustomField>
    <fullName>Actual_Value__c</fullName>
    <label>Actual Result</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>