force-app/main/default/objects/Visit_Result__c/fields/Max_Value__c.field-meta.xml
<CustomField>
    <fullName>Max_Value__c</fullName>
    <label>Max Value</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>