force-app/main/default/objects/Visit_Result__c/fields/Patient_Visit__c.field-meta.xml
<CustomField>
    <fullName>Patient_Visit__c</fullName>
    <label>Patient Visit</label>
    <referenceTo>Patient_Visit__c</referenceTo>
    <relationshipLabel>Visit_Results</relationshipLabel>
    <relationshipName>Visit_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>