force-app/main/default/objects/Visit_Result__c/fields/Result_Type__c.field-meta.xml
<CustomField>
    <fullName>Result_Type__c</fullName>
    <description>.</description>
    <label>Result Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>