force-app/main/default/objects/Visit_Result__c/fields/Visit_Result_Type__c.field-meta.xml
<CustomField>
    <fullName>Visit_Result_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit Result Type</label>
    <referenceTo>Visit_Result_Type__c</referenceTo>
    <relationshipLabel>Visit_Results</relationshipLabel>
    <relationshipName>Visit_Results</relationshipName>
    <type>Lookup</type>
</CustomField>