force-app/main/default/objects/Visit_Result__c/recordTypes/Lab.recordType-meta.xml
<RecordType>
    <fullName>Lab</fullName>
    <active>true</active>
    <label>Lab</label>
</RecordType>