force-app/main/default/objects/Visit_Result__c/recordTypes/Lab_Result.recordType-meta.xml
<RecordType>
    <fullName>Lab_Result</fullName>
    <active>true</active>
    <label>Lab Result</label>
</RecordType>