force-app/main/default/objects/Visit_Result__c/recordTypes/Vital.recordType-meta.xml
<RecordType>
    <fullName>Vital</fullName>
    <active>true</active>
    <label>Vital</label>
</RecordType>