force-app/main/default/objects/Visit_Result__c/recordTypes/Vitals.recordType-meta.xml
<RecordType>
    <fullName>Vitals</fullName>
    <active>true</active>
    <label>Vitals</label>
</RecordType>